--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ cachelib==0.6.0
 certifi>=2023.07.22
 charset-normalizer==2.0.12
 click==8.0.3
-colorama==0.4.4
+colorama>=0.4.5
 dill==0.3.6
 dnspython==2.2.0
 docopt==0.6.2
@@ -30,7 +30,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 lazy-object-proxy==1.9.0
 Mako>=1.2.2
-MarkupSafe==2.0.1
+MarkupSafe>=2.1.1
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==22.0
