--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ tomli==2.0.1
 tomlkit==0.11.8
 typing_extensions==4.7.1
 url-normalize==1.4.3
-urllib3==1.26.8
+urllib3~=1.26.17
 Werkzeug==2.3.6
 wrapt==1.15.0
 WTForms==3.0.1
