Backend/fix csrf and xss vulnerabilities (#364)
* Update for CSRF expiration equal to session expiration

* Add functionality for input sanitization

* Add sanitization for username

* Add sanitization for UTub name and description

* Add sanitization for tag strings

* Add sanitization for URL titles

* Format files not cleaned during missing precommit hooks

* Fix check for home no UTubs test

* Fix test for showing utub description btn when desc empty

* Make missing fields reset password UI test more robust..

* Fix flaky URL tests

* Another potential fix for flaky URL UI tests...

* Fix flaky forgot password test switching modals

* More robustness for flaky URL access tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -123,5 +123,6 @@ jobs:
       - name: Run tests
         env:
           DATABASE_URL_TEST: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports['5432'] }}/postgres
+        timeout-minutes: 10
         run: |
           python3.11 -m pytest 
