--- a/compose-local.yaml
+++ b/compose-local.yaml
@@ -1,4 +1,4 @@
-name: u4i-dev
+name: u4i-local
 
 services:
   web:
@@ -35,6 +35,7 @@ services:
       . /code/venv/bin/activate &&
       flask db upgrade &&
       flask shorturls add &&
+      echo 'Running on 127.0.0.1:8659!' &&
       flask run --host=0.0.0.0 --port=5000
       "
 
